--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   user-select: none;
+  font-family: Verdana;
 }
 
 .drag {
@@ -10,4 +11,29 @@
 
 .drag:hover {
   cursor: -webkit-grab;
+}
+
+.input-wrap {
+  margin-bottom: 10px;
+}
+
+.btn {
+	background-color:#44c767;
+	border-radius: 38px;
+	border: 1px solid #18ab29;
+	cursor: pointer;
+	color: #ffffff;
+	font-size: 17px;
+	padding: 16px 31px;
+	text-decoration: none;
+	text-shadow: 0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
 }
